--- a/EpicomTest/ApiTest.csproj
+++ b/EpicomTest/ApiTest.csproj
@@ -111,12 +111,15 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\SkusController.cs" />
+    <Compile Include="Daos\AbstractDao.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AbstractModel.cs" />
     <Compile Include="Models\Sku.cs" />
     <Compile Include="Daos\SkuDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AbstractService.cs" />
     <Compile Include="Services\SkuService.cs" />
   </ItemGroup>
   <ItemGroup>
