--- a/ApiTest/Web.config
+++ b/ApiTest/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SkuServiceContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SkuServiceContext-20161006004857; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SkuServiceContext-20161006004857.mdf" providerName="System.Data.SqlClient" />
+    <add name="ApiTest" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SkuServiceContext-20161006004857.mdf; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SkuServiceContext-20161006004857.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
