Change localDB to real localhost SQL Server Database

--- a/ApiTest/Web.config
+++ b/ApiTest/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ApiTest" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SkuServiceContext-20161006004857.mdf; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SkuServiceContext-20161006004857.mdf" providerName="System.Data.SqlClient" />
+    <add name="ApiTest" connectionString="Data Source=localhost;Initial Catalog=ApiTest;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -55,11 +55,7 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
