Creates Order Processing endpoint

--- a/ApiTest/ApiTest.csproj
+++ b/ApiTest/ApiTest.csproj
@@ -110,8 +110,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Components\Constants.cs" />
+    <Compile Include="Components\OrderType.cs" />
     <Compile Include="Controllers\SkusController.cs" />
     <Compile Include="Daos\GenericDao.cs" />
+    <Compile Include="Dto\OrderForm.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
