--- a/ApiTest/ApiTest.csproj
+++ b/ApiTest/ApiTest.csproj
@@ -120,8 +120,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AbstractModel.cs" />
+    <Compile Include="Models\AtributoDoGrupo.cs" />
+    <Compile Include="Models\Dimensoes.cs" />
+    <Compile Include="Models\Grupo.cs" />
+    <Compile Include="Models\Imagem.cs" />
     <Compile Include="Models\Sku.cs" />
     <Compile Include="Daos\SkuDao.cs" />
+    <Compile Include="Models\SkuMarketplaceGetResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AbstractService.cs" />
     <Compile Include="Services\OrderService.cs" />
