WIP: Back with generic models, but interfaced instead of abstract
This fixes the case where I couldn't execute a Find() on different
Identifiers.

Trying now to fix the relationship. Related Entities are coming null...

--- a/ApiTest/ApiTest.csproj
+++ b/ApiTest/ApiTest.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Models\SkuMarketplaceGetResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AbstractService.cs" />
+    <Compile Include="Services\DisponibilidadeService.cs" />
     <Compile Include="Services\OrderService.cs" />
     <Compile Include="Services\SkuService.cs" />
   </ItemGroup>
