--- a/ApiTest/ApiTest.csproj
+++ b/ApiTest/ApiTest.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Components\Constants.cs" />
     <Compile Include="Components\ApiEnums.cs" />
     <Compile Include="Controllers\SkusController.cs" />
+    <Compile Include="Daos\AbstractDao.cs" />
     <Compile Include="Daos\GenericDao.cs" />
     <Compile Include="Dto\OrderForm.cs" />
     <Compile Include="Exceptions\OrderException.cs" />
